<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_donations"
            android:icon="@drawable/donation"
            android:title="@string/menu_donations" />
        <item
            android:id="@+id/nav_announcements"
            android:icon="@drawable/announcements"
            android:title="@string/menu_announcements" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notification"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>