<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBg"
    tools:context=".activities.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/mp10"
        android:paddingEnd="@dimen/mp10">

        <ImageView
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_gravity="center"
            android:src="@drawable/logo_new" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mp10"
            android:gravity="center_vertical">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_autoFormatNumber="true"
                app:ccp_countryPreference="PK"
                app:ccp_defaultNameCode="PK" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_phone_number">

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/action_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/mp15"
            android:layout_marginBottom="@dimen/mp15"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/action_login"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="@dimen/mp7"
            app:spinning_bar_width="@dimen/mp5" />

        <TextView
            android:id="@+id/action_login_via_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mp15"
            android:layout_marginTop="@dimen/mp10"
            android:layout_marginEnd="@dimen/mp15"
            android:padding="@dimen/mp7"
            android:text="@string/str_login_via_email"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txt15"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/action_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mp15"
            android:layout_marginTop="@dimen/mp10"
            android:layout_marginEnd="@dimen/mp15"
            android:padding="@dimen/mp7"
            android:text="@string/str_forgot_password"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txt15"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/action_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mp15"
            android:layout_marginTop="@dimen/mp10"
            android:layout_marginEnd="@dimen/mp15"
            android:padding="@dimen/mp7"
            android:text="@string/str_registration"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txt15"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>